Individuals creating and /tree endpoint changes
* changed /tree endpoint body structure as requested
* added requested fields in endpoint responsible for creating a person
